# J-lens

./: .gitignore  AGENTS.md  Agent.md  CONTRIBUTING.md  README.md  pyproject.toml
Concept_intervention/: README.md
Concept_intervention/configs/: qwen35_4b.yaml  qwen35_4b_smoke.yaml
Concept_intervention/data/: axbench_abstract_allowlist.json  axbench_concept500_abstract_allowlist.json  builtin_abstract_concepts.jsonl  go_emotions_7concept_allowlist.json  go_emotions_7concept_full_allowlist.json
Concept_intervention/docs/: axbench_concept500_9b_l20_eda.md  data.md
Concept_intervention/reports/: data.js  qwen35_4b_goemotions_v1.md
Concept_intervention/scripts/: prepare_axbench_concept500.py  prepare_go_emotions.py  run_qwen35_4b.sh  run_qwen35_4b.slurm  run_tiny_integration.sh  smoke_offline.sh
J_space/: README.md
J_space/configs/: qwen35_4b.yaml  qwen35_4b_centered.yaml  qwen35_4b_row_normalized.yaml
J_space/reports/: data.js  qwen35_4b_centered_v1.md
J_space/scripts/: run_qwen35_4b.sh  run_qwen35_4b.slurm  smoke_offline.sh  (+1 more)
docs/: design.md  experiment_protocol.md
reports/: README.md  index.html
scripts/: preflight_qwen35_4b.py  preflight_qwen35_4b.slurm  prepare_go_emotions.py  smoke_concept_pipeline.py  smoke_jlens.py
tests/: test_activations.py  test_alignment.py  test_alignment_workflow.py  test_batched_alignment_workflow.py  test_cli.py  test_concept_workflow.py  test_config.py  test_data.py  test_interventions.py  test_jacobian.py  test_matrix.py  test_matrix_workflow.py  test_probes.py  test_report_contract.py  test_repository_contract.py
(+35 files in other folders)
