[build-system]
requires = ["setuptools>=75", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "jlens-workspace"
version = "0.1.0"
description = "Reproducible experiments for abstract-concept steering and J-space geometry"
readme = "README.md"
requires-python = ">=3.11"
license = "Apache-2.0"
authors = [{ name = "J-lens Workspace Contributors" }]
dependencies = [
  "numpy>=1.26",
  "pydantic>=2.7",
  "PyYAML>=6.0",
  "scikit-learn>=1.5",
  "scipy>=1.11",
]

[project.optional-dependencies]
llm = [
  "accelerate>=1.4",
  "datasets>=3.5",
  "hf-xet>=1.1",
  "huggingface-hub>=1.0",
  "safetensors>=0.4",
  "torch>=2.4",
  "transformers>=5.5,<6",
  "jlens @ git+https://github.com/anthropics/jacobian-lens.git@581d398613e5602a5af361e1c34d3a92ea82ba8e",
]
dev = [
  "pytest>=8.3",
  "pytest-cov>=6.0",
  "ruff>=0.9",
]

[project.scripts]
jlens-workspace = "jlens_workspace.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
addopts = "-ra --strict-markers"
testpaths = ["tests"]
markers = [
  "integration: needs optional LLM dependencies and may download a tiny model",
  "gpu: needs a CUDA device",
  "remote: needs network access",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP", "RUF"]
ignore = ["E501"]
